--- a/style.css
+++ b/style.css
@@ -12,18 +12,31 @@ body {
     align-items: center;
 }
 
+p {
+    padding: 15px;
+}
+
+.seznamy {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: row;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 40px;
+  }
+
 img {
     width: 20em;
     border-radius: 30px;
 }
 
-  ul {
-  list-style-type: none;
-  padding: 0;
-}
-
 a {
     text-decoration: none;
+    margin: 20px 30px;
 }
 
 a:hover {
